--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>ISS tracker</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-16x16.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-32x32.png"/>
