--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
     <title>ISS tracker</title>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+<!-- <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" /> -->
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-16x16.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-32x32.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-android-chrome-192x192.png"/>
