--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <title>ISS tracker</title>
 
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1" /> -->
+
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-16x16.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-32x32.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-android-chrome-192x192.png"/>
@@ -13,9 +15,10 @@
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-apple-touch-icon.png"/>
 
     <meta property="og:title" content="ISS Tracker">
+    <meta property="og:site_name" content="ISS Tracker">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/iss-social-media-image.jpg">
-    <!-- <meta property="og:site_name" content="ISStracker.net"> -->
+    <meta property=”og:url” content=”https://www.isstracker.live” />
     <meta property="og:description" content="Follow in real time the International Space Station's journey around the world and check out if it is currently crusing (400+ kms) above your head!">
 
 </head>
