loading html with javascript html loader

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class= "container">
+    <!-- <div class= "container">
         <div class= "surface-map">
             <div class= "satellite">
                 <i class="fas fa-satellite"></i>
@@ -30,7 +30,7 @@
                 <div class= "btn-text">LOCATE</div>
             </div>
         </div>
-    </div>  
+    </div>   -->
 </body>
 
 </html>
