--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     
 <head>
     <meta charset="utf-8">
-    <title>ISS tracker</title>
+    <!-- <title>ISS tracker</title> -->
 <!-- 
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-16x16.png"/>
     <link rel="shortcut icon" type="image/png" href="/favicon-iss-32x32.png"/>
