--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,13 +4,7 @@
     
 <head>
     <meta charset="utf-8">
-    <!-- <title>ISS tracker</title> -->
-<!-- 
-    <link rel="shortcut icon" type="image/png" href="/favicon-iss-16x16.png"/>
-    <link rel="shortcut icon" type="image/png" href="/favicon-iss-32x32.png"/>
-    <link rel="shortcut icon" type="image/png" href="/favicon-iss-android-chrome-192x192.png"/>
-    <link rel="shortcut icon" type="image/png" href="/favicon-iss-android-chrome-512x512.png"/>
-    <link rel="shortcut icon" type="image/png" href="/favicon-iss-apple-touch-icon.png"/> -->
+    <title>ISS tracker</title>
 
     <!-- <meta property="og:title" content="ISS Tracker">
     <meta property="og:site_name" content="ISS Tracker">
