--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="ISS Tracker">
     <meta property="og:type" content="website"> -->
     <!-- <meta property="og:image" content='/iss-social-media-image.jpg'> -->
-    <meta property="og:image" content="<%= require('/../images/iss-social-media-image.jpg') %>">
+    <meta property="og:image" content="../images/iss-social-media-image.jpg'%>">
     <!-- <meta property=”og:url” content=”https://www.isstracker.live” />
     <meta property="og:description" content="Follow in real time the International Space Station's journey around the world and check out if it is currently crusing (400+ kms) above your head!"> -->
 </head>
