fixed meta image  webpack html plugin

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     
 <head>
     <meta charset="utf-8">
-    <title>ISS tracker</title>
+    <title>ISS Tracker</title>
 
     <!-- <meta property="og:title" content="ISS Tracker">
     <meta property="og:site_name" content="ISS Tracker">
